Fixed patchy dimer state selection
(relative orientation issue)

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "# Main parameters\n",
     "numparticles = 2\n",
-    "boxsize = 5 \n",
+    "boxsize = 2 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "relativeDistanceCutOff = 2.2\n",
@@ -109,83 +109,19 @@
     "# Generates numTrajectories trajectories starting at a random position and ending in a given bound state.\n",
     "# This yields the first passage times for a given bound state. Each trajectory is Integrated until \n",
     "# a bound state is reached. The output in the files is the elapsed time and final state.\n",
-    "#datafile  = open('../../data/firts_passage_times/dimerFPTs_state1.xyz', 'w')\n",
-    "# datafile.close()\n",
     "traj = msmrd2.trajectories.patchyDimer(2,1) # dummy trajectory to calculate boundstate of patchydimer\n",
     "for i in range(numTrajectories):\n",
     "    partlist = randomPartList()\n",
     "    unbound = True\n",
     "    while(unbound):\n",
-    "        #start = timeit.timeit()\n",
     "        integrator.integrate(partlist)\n",
     "        boundState = traj.getBoundState(partlist[0], partlist[1])\n",
-    "        #end = timeit.timeit()\n",
-    "        #print(end - start)\n",
     "        if ( (boundState >= 1) and (boundState <= 8)):\n",
-    "            #datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "            print(integrator.clock, boundState)\n",
     "            print(partlist[0].position, partlist[0].orientation)\n",
     "            print(partlist[1].position, partlist[1].orientation)\n",
     "            integrator.resetClock()\n",
-    "            break;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start = timeit.timeit()\n",
-    "print(\"hello\")\n",
-    "end = timeit.timeit()\n",
-    "print(end - start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p1 = partlist[0].position\n",
-    "p2 = partlist[1].position\n",
-    "q1 = partlist[0].orientation \n",
-    "q2 = partlist[1].orientation\n",
-    "relp = p2 - p1\n",
-    "np.linalg.norm(relp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q0 = np.array([1.0, 0., 0., 0.])\n",
-    "qrel = quats.multiply(quats.conjugate(q1), q2)\n",
-    "print(quats.multiply(quats.conjugate(q1), q2))\n",
-    "print(quats.multiply(quats.conjugate(q2), q1))\n",
-    "print(quats.multiply(q2, quats.conjugate(q1)))\n",
-    "print(quats.multiply(q1, quats.conjugate(q2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quats.quaternionAngleDistance(q1,q2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.pi - 3*np.pi/5"
+    "            break;"
    ]
   },
   {
@@ -201,10 +137,14 @@
     "    v0 = part.position\n",
     "    v1 = v0 + 0.6*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
     "    v2 = v0 + 0.6*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
-    "    datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "    datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "    datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
-    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles, \n",
+    "    if j == 0:\n",
+    "        stringtype = 'type_0'\n",
+    "    else:\n",
+    "        stringtype = 'type_1'\n",
+    "    datafile.write(stringtype + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "    datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "    datafile.write('type_3' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "msmrdvis.generateTCL_patchyProteinsV2(numparticles = numparticles, \n",
     "                                     outfname = \"dimerStates\", \n",
     "                                     tclfname = \"../../data/vmd/tests/dimerStates2vmd.tcl\")"
    ]
@@ -214,7 +154,78 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "part1 = partlist[0]\n",
+    "part2 = partlist[1]\n",
+    "q1 = part1.orientation\n",
+    "q2 = part2.orientation\n",
+    "relquat = quats.multiply(quats.conjugate(q1), q2)\n",
+    "axisAng = quats.quat2angle(relquat)\n",
+    "print(relquat, axisAng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axisAng1 = quats.quat2angle(q1)\n",
+    "axisAng2 = quats.quat2angle(q2)\n",
+    "print(axisAng1, axisAng2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta  = 2*np.pi*np.random.rand()\n",
+    "rotaxis = (np.random.rand(), np.random.rand(), np.random.rand())\n",
+    "rotaxis = rotaxis/np.linalg.norm(rotaxis)\n",
+    "rotaxis = theta*rotaxis\n",
+    "print(rotaxis)\n",
+    "quat = msmrd2.tools.angle2quat(rotaxis)\n",
+    "#print(quat)\n",
+    "backrot = msmrd2.tools.quat2angle(quat)\n",
+    "print(backrot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backrot = msmrd2.tools.quat2angle(quat)\n",
+    "backrot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rotaxis*theta"
+   ]
   },
   {
    "cell_type": "code",
