--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -17,11 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters for laoding files\n",
+    "# Parameters for loading files\n",
     "nfiles = 200\n",
-    "fnamebase = '../data/dimer/simDimer_t4.00E+06_s25_'\n",
+    "fnamebase = '../data/dimer/simDimer_t2.00E+07_s25_'\n",
     "# Parameters for MSM generation \n",
-    "numBoundStates = 2\n",
+    "numBoundStates = 8\n",
     "lagtime = 200\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
@@ -47,6 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trajIndex = 194\n",
+    "a=dtrajs[trajIndex]\n",
+    "for i in range(40):\n",
+    "    print(i,len(a[a==i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Slice and stitch trajectories build MSM and extract rates\n",
     "rateDictionary = msmrdals.extractRatesMSM(dtrajs, lagtime, numBoundStates, stitching, fullDictionary)"
    ]
@@ -58,7 +70,7 @@
    "outputs": [],
    "source": [
     "# Export to data file with pickle (to be loaded later)\n",
-    "pickle_out = open(\"data/ratedictionary_dimer.pickle\",\"wb\")\n",
+    "pickle_out = open(\"data/ratedictionary_dimer_t2.00E+07_s25_lagt200.pickle\",\"wb\")\n",
     "pickle.dump(rateDictionary, pickle_out)\n",
     "pickle_out.close()"
    ]
@@ -70,6 +82,15 @@
    "outputs": [],
    "source": [
     "rateDictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rateDictionary[\"b2->b1\"]"
    ]
   },
   {
