--- a/examples/testMSMRDintegrator.ipynb
+++ b/examples/testMSMRDintegrator.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Main parameters\n",
-    "numBoundStates = 2\n",
+    "numBoundStates = 8\n",
     "maxNumBoundStates = 10\n",
     "relativeDistanceCutOff = 2.2\n",
     "numParticleTypes = 1 # num. of particle types (not states) in unbound state\n",
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Load pickled rateDicitionary generated in generateRateDictionary\n",
-    "pickle_in = open(\"data/ratedictionary_dimer.pickle\",\"rb\")\n",
+    "pickle_in = open(\"data/ratedictionary_dimer_t5.00E+06_s25_lagt200.pickle\",\"rb\")\n",
     "rateDictionary = pickle.load(pickle_in)"
    ]
   },
@@ -80,8 +80,8 @@
    "source": [
     "# Define coupling Markov model\n",
     "seed = 0\n",
-    "Dbound = [0.5, 0.5]\n",
-    "DboundRot = [1.0, 1.0]\n",
+    "Dbound = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
+    "DboundRot = [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]\n",
     "couplingMSM = msmrdMSM(effectiveLagtime, numBoundStates, numTransitionsStates, seed, rateDictionary) \n",
     "couplingMSM.setDbound(Dbound, DboundRot)\n",
     "couplingMSM.setmaxNumberBoundStates(maxNumBoundStates)"
@@ -133,8 +133,7 @@
     "integrator.setBoundary(boundary)\n",
     "discretization = msmrd2.discretizations.positionOrientationPartition(relativeDistanceCutOff, numSphericalSectionsPos,\n",
     "                                                                    numRadialSectionsQuat, numSphericalSectionsQuat)\n",
-    "integrator.setDiscretization(discretization)        include/trajectories/discrete/patchyDimer.hpp\n",
-    "        include/trajectories/discrete/patchyProtein.hpp"
+    "integrator.setDiscretization(discretization)"
    ]
   },
   {
@@ -155,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(20000):\n",
+    "for i in range(20000000):\n",
     "    integrator.integrate(partList)\n",
     "    if (partList[0].state != prevstate):\n",
     "        print(\"{:.4f}\".format(integrator.clock), partList[0].state, partList[1].state)\n",
