Added reference FPT script

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -25,11 +25,11 @@
    "source": [
     "# Main parameters\n",
     "numparticles = 2\n",
-    "boxsize = 2 #5 \n",
+    "boxsize = 6 #5 \n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "relativeDistanceCutOff = 2.2\n",
-    "numTrajectories = 1"
+    "numTrajectories = 1000"
    ]
   },
   {
@@ -110,13 +110,75 @@
     "# This yields the first passage times for a given bound state. Each trajectory is Integrated until \n",
     "# a bound state is reached. The output in the files is the elapsed time and final state.\n",
     "traj = msmrd2.trajectories.patchyDimer(2,1) # dummy trajectory to calculate boundstate of patchydimer\n",
+    "outputBoundStates = [1, 2, 5, 6] # Inner bound\n",
+    "Afpts = []\n",
+    "Bfpts = []\n",
     "for i in range(numTrajectories):\n",
+    "    print(\"Simulation:\", i, \"   \", end=\"\\r\")\n",
     "    partlist = randomPartList()\n",
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
     "        boundState = traj.getBoundState(partlist[0], partlist[1])\n",
     "        if ( (boundState >= 1) and (boundState <= 8)):\n",
+    "            if boundState in outputBoundStates:\n",
+    "                Afpts.append(integrator.clock)\n",
+    "                integrator.resetClock()\n",
+    "                unbound = False;\n",
+    "            else:\n",
+    "                Bfpts.append(integrator.clock)\n",
+    "                integrator.resetClock()\n",
+    "                unbound = False;\n",
+    "                \n",
+    "        if integrator.clock >= 1500.0:  \n",
+    "            integrator.resetClock()\n",
+    "            unbound = False;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FPTs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(FPTs, bins = 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For testing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generates numTrajectories trajectories starting at a random position and ending in a given bound state.\n",
+    "# This yields the first passage times for a given bound state. Each trajectory is Integrated until \n",
+    "# a bound state is reached. The output in the files is the elapsed time and final state.\n",
+    "traj = msmrd2.trajectories.patchyDimer(2,1) # dummy trajectory to calculate boundstate of patchydimer\n",
+    "outputBoundStates = [1, 2, 5, 6] # Inne bound \n",
+    "for i in range(numTrajectories):\n",
+    "    partlist = randomPartList()\n",
+    "    unbound = True\n",
+    "    while(unbound):\n",
+    "        integrator.integrate(partlist)\n",
+    "        boundState = traj.getBoundState(partlist[0], partlist[1])\n",
+    "        if boundState in outputBoundStates:\n",
+    "        #if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            print(integrator.clock, boundState)\n",
     "            print(partlist[0].position, partlist[0].orientation)\n",
     "            print(partlist[1].position, partlist[1].orientation)\n",
@@ -130,6 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a vmd output to see if states obtained by getBoundState fucntion match those expected.\n",
     "datafile  = open('../../data/vmd/tests/dimerStates.xyz', 'w')\n",
     "datafile.write(str(3*len(partlist)) + '\\n')\n",
     "datafile.write(str(0) + '\\n')\n",
@@ -155,76 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "part1 = partlist[0]\n",
-    "part2 = partlist[1]\n",
-    "q1 = part1.orientation\n",
-    "q2 = part2.orientation\n",
-    "relquat = quats.multiply(quats.conjugate(q1), q2)\n",
-    "axisAng = quats.quat2angle(relquat)\n",
-    "print(relquat, axisAng)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "axisAng1 = quats.quat2angle(q1)\n",
-    "axisAng2 = quats.quat2angle(q2)\n",
-    "print(axisAng1, axisAng2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "theta  = 2*np.pi*np.random.rand()\n",
-    "rotaxis = (np.random.rand(), np.random.rand(), np.random.rand())\n",
-    "rotaxis = rotaxis/np.linalg.norm(rotaxis)\n",
-    "rotaxis = theta*rotaxis\n",
-    "print(rotaxis)\n",
-    "quat = msmrd2.tools.angle2quat(rotaxis)\n",
-    "#print(quat)\n",
-    "backrot = msmrd2.tools.quat2angle(quat)\n",
-    "print(backrot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quat"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "backrot = msmrd2.tools.quat2angle(quat)\n",
-    "backrot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rotaxis*theta"
+    "map(str, 5.5)"
    ]
   },
   {
