Updated NBs and extract rates routine

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -14,6 +14,7 @@
     "from msmrd2.potentials import patchyParticleAngular\n",
     "from msmrd2.integrators import overdampedLangevin as odLangevin\n",
     "import msmrd2.tools.quaternions as quats\n",
+    "import msmrd2.tools.particleTools as particleTools\n",
     "import timeit"
    ]
   },
@@ -30,41 +31,6 @@
     "Drot = 1.0\n",
     "relativeDistanceCutOff = 2.2\n",
     "numTrajectories = 1000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Particle list generation\n",
-    "def randomPartList():\n",
-    "    '''\n",
-    "    Generates particle list with uniformly random position and orientation. It also enforces the particles don't\n",
-    "    overlap over a distance given by the relative distance cut off.\n",
-    "    '''\n",
-    "    pyPartlist = [] \n",
-    "    for i in range(numparticles):\n",
-    "\n",
-    "        overlap = True\n",
-    "        while overlap:\n",
-    "            position = np.array([boxsize*np.random.rand()-0.5*boxsize,\n",
-    "                                 boxsize*np.random.rand()-0.5*boxsize,\n",
-    "                                 boxsize*np.random.rand()-0.5*boxsize])\n",
-    "            overlap = False     \n",
-    "            for j in range(len(pyPartlist)):\n",
-    "                if np.linalg.norm(position - pyPartlist[j].position) < relativeDistanceCutOff:\n",
-    "                    overlap = True\n",
-    "                    continue\n",
-    "\n",
-    "        orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
-    "        orientation = orientation/np.linalg.norm(orientation)\n",
-    "        part = msmrd2.particle(D, Drot, position, orientation)\n",
-    "        pyPartlist.append(part)\n",
-    "\n",
-    "    partlist = msmrd2.integrators.particleList(pyPartlist)\n",
-    "    return partlist"
    ]
   },
   {
@@ -90,8 +56,8 @@
    "source": [
     "# Define Patchy Particle potential\n",
     "sigma = 1.0\n",
-    "strength = 160 #200.0\n",
-    "angularStrength = 20 #200.0\n",
+    "strength = 100 #160 #200.0\n",
+    "angularStrength = 10 #20 #200.0\n",
     "angleDiff = 3*np.pi/5.0\n",
     "patch1 = np.array([np.cos(angleDiff/2),np.sin(angleDiff/2),0.])\n",
     "patch2 = np.array([np.cos(-angleDiff/2),np.sin(-angleDiff/2),0.])\n",
@@ -115,7 +81,7 @@
     "Bfpts = []\n",
     "for i in range(numTrajectories):\n",
     "    print(\"Simulation:\", i, \"   \", end=\"\\r\")\n",
-    "    partlist = randomPartList()\n",
+    "    partlist = particleTools.randomPartList(numparticles, boxsize, relativeDistanceCutOff, D, Drot)\n",
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
