--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pickle\n",
     "import numpy as np\n",
-    "import msmrd2.analysis as msmrdals"
+    "import msmrd2.analysis as msmrdals\n",
+    "import pyemma"
    ]
   },
   {
@@ -18,8 +19,8 @@
    "outputs": [],
    "source": [
     "# Parameters for loading files\n",
-    "nfiles = 200\n",
-    "fnamebase = '../data/dimer/simDimer_t2.00E+07_s25_'\n",
+    "nfiles = 10\n",
+    "fnamebase = '../data/dimer/simDimer_t2.00E+06_s25_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
     "lagtime = 200\n",
@@ -47,10 +48,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajIndex = 1\n",
-    "a=dtrajs[trajIndex]\n",
-    "for i in range(40):\n",
-    "    print(i,len(a[a==i]))"
+    "# Slice trajectories getting rid of the unbound state 0\n",
+    "unboundStateIndex = 0\n",
+    "slicedDtrajs = msmrdals.splitDiscreteTrajs(dtrajs, unboundStateIndex)\n",
+    "# Stitch trajectories if wanted\n",
+    "if stitching:\n",
+    "    finalTrajs = msmrdals.stitchTrajs(slicedDtrajs, 500)\n",
+    "else:\n",
+    "    finalTrajs = slicedDtrajs"
    ]
   },
   {
@@ -59,8 +64,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Slice and stitch trajectories build MSM and extract rates\n",
-    "rateDictionary = msmrdals.extractRatesMSM(dtrajs, lagtime, numBoundStates, stitching, fullDictionary)"
+    "# Create MSM between transision states and bound states without stitching\n",
+    "mainmsm = pyemma.msm.estimate_markov_model(finalTrajs, lagtime, reversible=False)\n",
+    "# The active set keep track of the indexes used by pyemma and the ones used to describe the state in our model.\n",
+    "activeSet = mainmsm.active_set\n",
+    "print(activeSet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rateDictionary = msmrdals.MSMtoRateDictionary(mainmsm, numBoundStates, fullDictionary)\n",
+    "# Alternatively, it can all be done with one function: slice and stitch trajectories then build MSM and extract rates\n",
+    "# rateDictionary = msmrdals.extractRatesMSM(dtrajs, lagtime, numBoundStates, stitching, fullDictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trajIndex = 1\n",
+    "a=dtrajs[trajIndex]\n",
+    "for i in range(40):\n",
+    "    print(i,len(a[a==i]))"
    ]
   },
   {
@@ -92,13 +123,6 @@
    "source": [
     "rateDictionary[\"b2->b1\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
