Correction to MSMRD integrator

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -81,7 +81,7 @@
     "Bfpts = []\n",
     "for i in range(numTrajectories):\n",
     "    print(\"Simulation:\", i, \"   \", end=\"\\r\")\n",
-    "    partlist = particleTools.randomPartList(numparticles, boxsize, relativeDistanceCutOff, D, Drot)\n",
+    "    partlist = particleTools.randomParticleList(numparticles, boxsize, relativeDistanceCutOff, D, Drot)\n",
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
@@ -102,12 +102,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "FPTs"
+    "## Load data computed by script\n",
+    "based on code above"
    ]
   },
   {
@@ -116,7 +115,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(FPTs, bins = 20)"
+    "filename = '../../data/dimer/first_passage_times/patchyDimerFPTs_boxsize6.xyz'\n",
+    "fptsA = []\n",
+    "fptsB = []\n",
+    "with open(filename) as file:\n",
+    "    for line in file:\n",
+    "        state, time = line.split(\" \")\n",
+    "        time = float(time)\n",
+    "        if state == 'A':\n",
+    "            fptsA.append(time)\n",
+    "        elif state == 'B':\n",
+    "            fptsB.append(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(fptsA, bins = 40, alpha=0.5, label ='A');\n",
+    "plt.hist(fptsB, bins = 40, alpha=0.5, label ='B');\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.array(fptsA).mean(), np.array(fptsB).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data from MSMRD integrator\n",
+    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_boxsize6.xyz'\n",
+    "MSMRDfptsA = []\n",
+    "MSMRDfptsB = []\n",
+    "with open(filename) as file:\n",
+    "    for line in file:\n",
+    "        state, time = line.split(\" \")\n",
+    "        time = float(time)\n",
+    "        if state == 'A':\n",
+    "            MSMRDfptsA.append(time)\n",
+    "        elif state == 'B':\n",
+    "            MSMRDfptsB.append(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='A');\n",
+    "plt.hist(MSMRDfptsB, bins = 40, alpha=0.5, label ='B');\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(fptsA, bins = 40, alpha=0.5, label ='A');\n",
+    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='B');\n",
+    "plt.legend()"
    ]
   },
   {
