--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -9,7 +9,9 @@
     "import pickle\n",
     "import numpy as np\n",
     "import msmrd2.analysis as msmrdals\n",
-    "import pyemma"
+    "import pyemma\n",
+    "import pyemma.plots as mplt\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -19,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Parameters for loading files\n",
-    "nfiles = 10\n",
+    "nfiles = 200\n",
     "fnamebase = '../data/dimer/simDimer_t2.00E+06_s25_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
@@ -77,6 +79,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "maxlagtime = 500\n",
+    "its = pyemma.msm.its(finalTrajs, maxlagtime)\n",
+    "mplt.plot_implied_timescales(its, nits = 40, ylog=True, units='steps', linewidth=2, dt=1)\n",
+    "plt.ylabel(r\"timescale/steps\", fontsize = 24)\n",
+    "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rateDictionary = msmrdals.MSMtoRateDictionary(mainmsm, numBoundStates, fullDictionary)\n",
     "# Alternatively, it can all be done with one function: slice and stitch trajectories then build MSM and extract rates\n",
     "# rateDictionary = msmrdals.extractRatesMSM(dtrajs, lagtime, numBoundStates, stitching, fullDictionary)"
@@ -88,20 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajIndex = 1\n",
-    "a=dtrajs[trajIndex]\n",
-    "for i in range(40):\n",
-    "    print(i,len(a[a==i]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Export to data file with pickle (to be loaded later)\n",
-    "pickle_out = open(\"pickled_data/ratedictionary_dimer_t2.00E+07_s25_lagt200.pickle\",\"wb\")\n",
+    "pickle_out = open(\"pickled_data/ratedictionary_dimer_t2.00E+06_s25_lagt200.pickle\",\"wb\")\n",
     "pickle.dump(rateDictionary, pickle_out)\n",
     "pickle_out.close()"
    ]
