Moved effective dt from msmrdMarkovModel to rate extraction

--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -21,7 +21,10 @@
    "outputs": [],
    "source": [
     "# Parameters for loading files\n",
-    "nfiles = 200\n",
+    "nfiles = 500\n",
+    "dt = 0.00001 # from original simulation\n",
+    "stride = 25  # stride of sampling (every 25th dt)\n",
+    "dtEffective = dt*stride # needed to obtain rate dictionary\n",
     "fnamebase = '../data/dimer/simDimer_t2.00E+06_s25_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
@@ -92,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rateDictionary = msmrdals.MSMtoRateDictionary(mainmsm, numBoundStates, fullDictionary)\n",
+    "rateDictionary = msmrdals.MSMtoRateDictionary(mainmsm, numBoundStates, dtEffective, fullDictionary)\n",
     "# Alternatively, it can all be done with one function: slice and stitch trajectories then build MSM and extract rates\n",
     "# rateDictionary = msmrdals.extractRatesMSM(dtrajs, lagtime, numBoundStates, stitching, fullDictionary)"
    ]
