--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = '../../data/dimer/first_passage_times/patchyDimerFPTs_boxsize6.xyz'\n",
+    "filename = '../../data/dimer/first_passage_times/patchyDimerFPTs_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA = []\n",
     "fptsB = []\n",
     "with open(filename) as file:\n",
@@ -155,7 +155,9 @@
    "outputs": [],
    "source": [
     "# Load data from MSMRD integrator\n",
-    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_boxsize6.xyz'\n",
+    "lagtime = 200\n",
+    "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_lagt' + str(lagtime) +  \\\n",
+    "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA = []\n",
     "MSMRDfptsB = []\n",
     "with open(filename) as file:\n",
@@ -185,9 +187,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(fptsA, bins = 40, alpha=0.5, label ='A');\n",
-    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='B');\n",
+    "print(np.array(MSMRDfptsA).mean(), np.array(MSMRDfptsB).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizing weights\n",
+    "weightsA = np.ones_like(fptsA)/float(len(fptsA))\n",
+    "weightsAMSMRD = np.ones_like(MSMRDfptsA)/float(len(MSMRDfptsA))\n",
+    "# Plot histograms\n",
+    "plt.hist(fptsA, bins = 40, alpha=0.5, label ='A', weights = weightsA);\n",
+    "plt.hist(MSMRDfptsA, bins = 40, alpha=0.5, label ='MSMRD-A', weights = weightsAMSMRD);\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizing weights\n",
+    "weightsB = np.ones_like(fptsB)/float(len(fptsB))\n",
+    "weightsBMSMRD = np.ones_like(MSMRDfptsB)/float(len(MSMRDfptsB))\n",
+    "# Plot histograms\n",
+    "plt.hist(fptsB, bins = 40, alpha=0.5, label ='B', weights = weightsB);\n",
+    "plt.hist(MSMRDfptsB, bins = 40, alpha=0.5, label ='MSMRD-B', weights = weightsBMSMRD);\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(fptsB), len(MSMRDfptsB))\n",
+    "print(len(fptsA), len(MSMRDfptsA))"
    ]
   },
   {
