--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -25,10 +25,11 @@
     "dt = 0.00001 # from original simulation\n",
     "stride = 25  # stride of sampling (every 25th dt)\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
+    "totalTimeSteps = 2000000\n",
     "fnamebase = '../data/dimer/simDimer_t2.00E+06_s25_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 200\n",
+    "lagtime = 150\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
    ]
@@ -107,7 +108,7 @@
    "outputs": [],
    "source": [
     "# Export to data file with pickle (to be loaded later)\n",
-    "pickle_out = open(\"pickled_data/ratedictionary_dimer_t2.00E+06_s25_lagt200.pickle\",\"wb\")\n",
+    "pickle_out = open(\"pickled_data/ratedictionary_dimer_t\" + \"{:.2E}\".format(timesteps) + \"2.00E+06\"\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(rateDictionary, pickle_out)\n",
     "pickle_out.close()"
    ]
