Added numpy seed for parallel scripts

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -115,10 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = '../../data/dimer/first_passage_times/patchyDimerFPTs_boxsize' + str(boxsize) + '.xyz'\n",
+    "numTrajs = 7000\n",
+    "filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA = []\n",
     "fptsB = []\n",
-    "with open(filename) as file:\n",
+    "with open(filename1) as file:\n",
     "    for line in file:\n",
     "        state, time = line.split(\" \")\n",
     "        time = float(time)\n",
@@ -145,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.array(fptsA).mean(), np.array(fptsB).mean())"
+    "print(np.array(fptsA).mean(), np.array(fptsB).mean() )"
    ]
   },
   {
@@ -155,7 +156,7 @@
    "outputs": [],
    "source": [
     "# Load data from MSMRD integrator\n",
-    "lagtime = 200\n",
+    "lagtime = 600\n",
     "filename = '../../data/dimer/first_passage_times/MSMRDpatchyDimerFPTs_lagt' + str(lagtime) +  \\\n",
     "'_boxsize' + str(boxsize) + '.xyz'\n",
     "MSMRDfptsA = []\n",
@@ -227,7 +228,10 @@
    "outputs": [],
    "source": [
     "print(len(fptsB), len(MSMRDfptsB))\n",
-    "print(len(fptsA), len(MSMRDfptsA))"
+    "print(len(fptsA), len(MSMRDfptsA))\n",
+    "ratioFPT = float(len(fptsA))/float(len(fptsB))\n",
+    "ratioMSMRDFPT = float(len(MSMRDfptsA))/float(len(MSMRDfptsB))\n",
+    "print(\"Ratios:\", ratioFPT, ratioMSMRDFPT )"
    ]
   },
   {
