--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -29,7 +29,8 @@
     "fnamebase = '../data/dimer/simDimer_t2.00E+06_s25_'\n",
     "# Parameters for MSM generation \n",
     "numBoundStates = 8\n",
-    "lagtime = 150\n",
+    "lagtime = 200\n",
+    "reversible = True\n",
     "stitching = True\n",
     "fullDictionary = False # Only rates to and from bound states."
    ]
@@ -71,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Create MSM between transision states and bound states without stitching\n",
-    "mainmsm = pyemma.msm.estimate_markov_model(finalTrajs, lagtime, reversible=False)\n",
+    "mainmsm = pyemma.msm.estimate_markov_model(finalTrajs, lagtime, reversible=reversible)\n",
     "# The active set keep track of the indexes used by pyemma and the ones used to describe the state in our model.\n",
     "activeSet = mainmsm.active_set\n",
     "print(activeSet)"
@@ -83,11 +84,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxlagtime = 500\n",
-    "its = pyemma.msm.its(finalTrajs, maxlagtime)\n",
-    "mplt.plot_implied_timescales(its, nits = 40, ylog=True, units='steps', linewidth=2, dt=1)\n",
+    "# CK-test\n",
+    "nstates = 8\n",
+    "cktest = mainmsm.cktest(nstates, mlags=6)\n",
+    "mplt.plot_cktest(cktest);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxlagtime = 1000\n",
+    "nits = 40\n",
+    "its = pyemma.msm.its(finalTrajs, maxlagtime, reversible=reversible)\n",
+    "mplt.plot_implied_timescales(its, nits = nits, ylog=True, units='steps', linewidth=2, dt=1)\n",
+    "plt.ylabel(r\"log(timescale/steps)\", fontsize = 24)\n",
+    "plt.xlabel(r\"lag time/steps\", fontsize = 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mplt.plot_implied_timescales(its, nits = nits, ylog=False, units='steps', linewidth=2, dt=1)\n",
     "plt.ylabel(r\"timescale/steps\", fontsize = 24)\n",
-    "plt.xlabel(r\"lag time/steps\", fontsize = 24)\n"
+    "plt.xlabel(r\"lag time/steps\", fontsize = 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eig0 = mainmsm.eigenvectors_right()[4]\n",
+    "np.where(eig0>0.01)"
    ]
   },
   {
@@ -108,7 +143,7 @@
    "outputs": [],
    "source": [
     "# Export to data file with pickle (to be loaded later)\n",
-    "pickle_out = open(\"pickled_data/ratedictionary_dimer_t\" + \"{:.2E}\".format(timesteps) + \"2.00E+06\"\"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
+    "pickle_out = open(\"pickled_data/ratedictionary_dimer_test_t\" + \"{:.2E}\".format(totalTimeSteps ) + \"_s\" + \"{:d}\".format(stride) + \"_lagt\" + \"{:d}\".format(lagtime) + \".pickle\",\"wb\")\n",
     "pickle.dump(rateDictionary, pickle_out)\n",
     "pickle_out.close()"
    ]
