--- a/examples/generateRateDictionary.ipynb
+++ b/examples/generateRateDictionary.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Parameters for loading files\n",
-    "nfiles = 500\n",
+    "nfiles = 1000\n",
     "dt = 0.00001 # from original simulation\n",
     "stride = 25  # stride of sampling (every 25th dt)\n",
     "dtEffective = dt*stride # needed to obtain rate dictionary\n",
@@ -44,7 +44,7 @@
     "# Load discrete trajectories\n",
     "dtrajs = []\n",
     "for i in range(nfiles):\n",
-    "    dtraj = msmrdals.loadDiscreteTrajectory(fnamebase, i)\n",
+    "    dtraj = msmrdals.loadTrajectory(fnamebase, i)\n",
     "    dtrajs.append(dtraj)    \n",
     "    print(\"File \", i+1, \" of \", nfiles, \" done.\", end=\"\\r\")"
    ]
@@ -58,6 +58,7 @@
     "# Slice trajectories getting rid of the unbound state 0\n",
     "unboundStateIndex = 0\n",
     "slicedDtrajs = msmrdals.splitDiscreteTrajs(dtrajs, unboundStateIndex)\n",
+    "del dtrajs\n",
     "# Stitch trajectories if wanted\n",
     "if stitching:\n",
     "    finalTrajs = msmrdals.stitchTrajs(slicedDtrajs, 500)\n",
