Enable discretization of trajectories directly from python

--- a/examples/benchmark/patchyDimerFPTs.ipynb
+++ b/examples/benchmark/patchyDimerFPTs.ipynb
@@ -85,7 +85,7 @@
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
-    "        boundState = traj.getBoundState(partlist[0], partlist[1])\n",
+    "        boundState = traj.getState(partlist[0], partlist[1])\n",
     "        if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            if boundState in outputBoundStates:\n",
     "                Afpts.append(integrator.clock)\n",
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numTrajs = 5000\n",
+    "numTrajs = 10000\n",
     "filename1 = '../../data/dimer/first_passage_times/patchyDimerFPTs_trajs' + str(numTrajs) + '_boxsize' + str(boxsize) + '.xyz'\n",
     "fptsA = []\n",
     "fptsB = []\n",
@@ -257,7 +257,7 @@
     "    unbound = True\n",
     "    while(unbound):\n",
     "        integrator.integrate(partlist)\n",
-    "        boundState = traj.getBoundState(partlist[0], partlist[1])\n",
+    "        boundState = traj.getState(partlist[0], partlist[1])\n",
     "        if boundState in outputBoundStates:\n",
     "        #if ( (boundState >= 1) and (boundState <= 8)):\n",
     "            print(integrator.clock, boundState)\n",
