Switched to random.random() for parallel runs

--- a/examples/readDimerData.ipynb
+++ b/examples/readDimerData.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import msmrd2.tools as msmrdtls\n",
     "import msmrd2.analysis as msmrdals\n",
-    "from msmrd2 import msmrdMarkovModel\n",
+    "from msmrd2.markovModels import msmrdMarkovModel\n",
     "import pyemma\n",
     "import matplotlib.pyplot as plt\n",
     "import pyemma.plots as mplt"
